# testCodex

./: CMakeLists.txt  README.md
docs/: architecture.md  wiring.md
