cmake_minimum_required(VERSION 3.13)

set(CMAKE_C_STANDARD 11)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

# Set PICO_SDK_PATH in your environment before configuring:
# export PICO_SDK_PATH=/path/to/pico-sdk
include($ENV{PICO_SDK_PATH}/external/pico_sdk_import.cmake)

project(pico_keypad_led C CXX ASM)

pico_sdk_init()

add_executable(pico_keypad_led
  src/main.cpp
)

target_include_directories(pico_keypad_led PRIVATE
  ${CMAKE_CURRENT_LIST_DIR}/include
)

target_link_libraries(pico_keypad_led
  pico_stdlib
)

pico_add_extra_outputs(pico_keypad_led)
